--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -343,7 +343,7 @@ h2.welcome-title {
 }
 
 .story-bg {
-    background: url("../img/story-bg.jpg");
+    background: url("../img/fondo2.2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     position: absolute;
@@ -354,6 +354,7 @@ h2.welcome-title {
     -moz-animation-delay: 1.7s;
     -webkit-animation-delay: 1.7s;
     animation-delay: 1.7s;
+    
 }
 
 .inner-story {
@@ -382,7 +383,7 @@ h2.welcome-title {
 }
 
 .offer-bg {
-    background: url("../img/offer-bg.jpg");
+    background: url("../img/fondo3.1.png");
     background-repeat: no-repeat;
     background-size: cover;
     position: absolute;
