--- a/MoxxDesignsWebApp/src/main/webapp/styles/carrito.css
+++ b/MoxxDesignsWebApp/src/main/webapp/styles/carrito.css
@@ -149,3 +149,20 @@
     color: var(--dark-blue);
     margin-bottom: 1rem;
 }
+
+.site-branding img {
+    max-width: 100%;
+    height: auto;
+}
+
+@media (min-width: 768px) {
+    .site-branding img {
+        max-width: 250px;
+    }
+}
+
+@media (max-width: 576px) {
+    .site-branding img {
+        max-width: 150px;
+    }
+}
