--- a/MoxxDesignsWebApp/src/main/webapp/styles/contactanos.css
+++ b/MoxxDesignsWebApp/src/main/webapp/styles/contactanos.css
@@ -109,3 +109,20 @@
 textarea.form-control {
     min-height: 150px;
 }
+
+.site-branding img {
+    max-width: 100%;
+    height: auto;
+}
+
+@media (min-width: 768px) {
+    .site-branding img {
+        max-width: 250px;
+    }
+}
+
+@media (max-width: 576px) {
+    .site-branding img {
+        max-width: 150px;
+    }
+}
