--- a/MoxxDesignsWebApp/src/main/webapp/styles/cotizacion.css
+++ b/MoxxDesignsWebApp/src/main/webapp/styles/cotizacion.css
@@ -205,3 +205,20 @@
         opacity: 1;
     }
 }
+
+.site-branding img {
+    max-width: 100%;
+    height: auto;
+}
+
+@media (min-width: 768px) {
+    .site-branding img {
+        max-width: 250px;
+    }
+}
+
+@media (max-width: 576px) {
+    .site-branding img {
+        max-width: 150px;
+    }
+}
