--- a/MoxxDesignsWebApp/src/main/webapp/styles/index.css
+++ b/MoxxDesignsWebApp/src/main/webapp/styles/index.css
@@ -91,3 +91,23 @@
     height: 200px;
     object-fit: cover;
 }
+
+/* Estilo para el logo en la navbar */
+.site-branding img {
+    max-width: 100%;
+    height: auto;
+}
+
+/* Estilo para pantallas más grandes */
+@media (min-width: 768px) {
+    .site-branding img {
+        max-width: 250px; /* Ajusta este valor según tus necesidades */
+    }
+}
+
+/* Estilo para pantallas pequeñas */
+@media (max-width: 576px) {
+    .site-branding img {
+        max-width: 150px; /* Ajusta este valor según el tamaño del logo */
+    }
+}
