--- a/MoxxDesignsWebApp/src/main/webapp/styles/sobre-nosotros.css
+++ b/MoxxDesignsWebApp/src/main/webapp/styles/sobre-nosotros.css
@@ -104,3 +104,20 @@
     color: var(--primary-blue);
     margin-bottom: 1rem;
 }
+
+.site-branding img {
+    max-width: 100%;
+    height: auto;
+}
+
+@media (min-width: 768px) {
+    .site-branding img {
+        max-width: 250px;
+    }
+}
+
+@media (max-width: 576px) {
+    .site-branding img {
+        max-width: 150px;
+    }
+}
