--- a/MoxxDesignsWebApp/src/main/webapp/styles/cotizacion.css
+++ b/MoxxDesignsWebApp/src/main/webapp/styles/cotizacion.css
@@ -59,8 +59,11 @@
 }
 
 .product-card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    transform: translateY(-20px);
+    /*border: 2px solid var(--dark-blue);*/
+    transition: all 0.5s ease;
+    /*transition: border 0.2s ease;*/
+    box-shadow: 0 5px 15px rgba(0,0,0,1);
 }
 
 .product-image {
